--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,14 @@
 {
     "files.associations": {
-        "*.tcc": "cpp"
+        "*.inc": "cpp",
+        "*.tcc": "cpp",
+        "charconv": "cpp",
+        "cstdint": "cpp",
+        "array": "cpp",
+        "string_view": "cpp",
+        "format": "cpp",
+        "initializer_list": "cpp",
+        "span": "cpp",
+        "compare": "cpp"
     }
 }
